[package]
name = "nanogit"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
eframe = { version = "0.30.0", features = ["persistence"], optional = true }
egui-notify = { version = "0.18.0", optional = true }
env_logger = "0.11.6"
log = "0.4.25"
rfd = { version = "0.15.2", optional = true }
# basic-git = { version = "*", path = "./basic-git" }
serde = { version = "1.0.217", features = ["derive"], optional = true }
git2 = "0.20.0"
egui-phosphor = "0.8.0"
egui_code_editor = "0.2.11"

[features]
# The `gui` feature brings in the GUI dependencies
# By default, you can either include "gui" or not:
default = ["gui"] # means no features are enabled by default
gui = [
    "eframe",
    "egui-notify",
    "rfd",
    "serde",
] # add all optional GUI deps in here

# If you want the GUI by default instead, do:
# default = ["gui"]
